# rust_crud_rest_api

./: .env.sample  .gitignore  Cargo.toml  README.md
entity/: Cargo.toml
entity/src/: user.rs
entity/src/users/: mod.rs  prelude.rs  users.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
migrations/: V1__initial.sql
sql/: create_user.sql  delete_user.sql  get_user.sql  get_userbirthday.sql  get_users.sql  schema.sql  update_user.sql
src/: config.rs  error.rs  lib.rs  main.rs
src/crud/: controller.rs  dto.rs  mod.rs  service.rs
src/users/: controller.rs  dto.rs  mod.rs  service.rs
tests/: config.toml  user_controller_test.rs
tests/common/: mod.rs
