[package]
name = "rust_crud_restapi"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
config = "0.11.0"
deadpool-postgres = { version = "0.10.1", features = ["serde"] }
derive_more = "0.99.2"
dotenv = "0.15.0"
serde = { version = "1.0.104", features = ["derive"] }
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = { version = "0.7.6", features = ["array-impls", "with-chrono-0_4"] }
log = "0.4.17"
env_logger = "0.9.0"
chrono = { version = "0.4.19", features = ["serde"] }
refinery = { version = "0.8", features = ["tokio-postgres"]}
