[package]
name = "rust_crud_restapi"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
config = "0.13.1"
derive_more = "0.99.2"
serde = { version = "1.0.104", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
log = "0.4.17"
env_logger = "0.9.0"
entity = { path = "entity" }
migration = { path = "migration" }

[dependencies.sea-orm]
version = "^0.8"
features = [ 
  "sqlx-postgres", 
  "runtime-actix-native-tls", 
  "macros",
  "with-chrono",
]

[dev-dependencies.sea-orm]
version = "^0.8"
features = ["mock"]

[dev-dependencies]
actix-rt = "2.7.0"
actix-http = "3.1.0"
lazy_static = "1.4.0"
async_once = "0.2.6"

# [features]
# default = ["seaorm-mock"]
# seaorm-mock = ["sea-orm/mock"]
